Edits to case study paper, chapter 2

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -52,21 +52,21 @@ We consider two types of LRPs based on two different metrics:
 
 1) Proportional LRPs use a proportion as the metric upon which LRPs are based. Specifically, they use the proportion of CUs within an SMU that are above the Red WSP status zone. We assume that in order for an SMU to remain above its proportional LRP, 100% of CUs must have status estimates above Red (i.e., either Amber or Green).
 
-2) Aggregate abundance LRPs use the total SMU-level spawning abundance as the metric upon which LRPs are based. 
+2) Aggregate abundance LRPs use the total SMU-level spawning abundance as the metric upon which LRPs are based. Two methods of developing aggregate abundance LRPs are applied: (i) Logistic Regression LRPs and (ii) Projection LRPs.
 
-We propose that proportional LRPs are more appropriate for Pacific salmon SMUs in order to align with DFO's WSP. 
+We propose that proportional LRPs are more appropriate for Pacific salmon SMUs in order to align with DFO's WSP; however, aggregate abundance LRP methods may be added to meet specific fisheries management requirements. 
 
-WSP assessments are typically intensive expert-driven processes and have only been completed for a small subset of priority CUs to date.  We demonstrate the application of the Pacific Salmon Status Scanner Tool (hereafter referred to as the 'Salmon Scanner') that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). Applying this tool enables the generation of up-to-date estimates of CU status for all of our case study applications, and is recommended as a tool for defining LRPs in our companion working paper (Holt et al., in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->. When developing aggregate abundance LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the Salmon Scanner better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the Salmon Scanner reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available to estimate lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
+We implement proportion based LRP’s by adopting approaches developed to assess CU status under DFO's WSP [@dfoCanadaPolicyConservation2005; @holtIndicatorsStatusBenchmarks2009] and implemented for a subset of priority CUs [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. These approaches use multiple metrics to evaluate status including trends in abundance and abundance metrics, and an expert driven integration approach to combine statuses across metrics into a single status for each CU. In our work, we rely on a recently developed approach that approximates these detailed status assessment methods using the Pacific Salmon Status Scanner tool (hereafter referred to as the 'Salmon Scanner'; Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). The Salmon Scanner allows us to rapidly generate up-to-date estimates of integrated CU status for all of our case study applications, and is recommended as an approach for defining LRPs in our companion working paper (Holt et al., in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->. 
 
-When developing aggregate abundance LRP options for Pacific salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above Red status. We use two methods to identify these levels: (i) logistic regression LRPs and (ii) projection LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportional and aggregate abundance LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
+When developing aggregate abundance LRPs, estimates of CU status are based on a comparison of spawning abundance to a single lower benchmark for each CU in an SMU. Exceptions are described in the application to case studies. A variety of methods are available to estimate lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). When developing aggregate abundance LRP options, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above Red status. 
+
+More detailed descriptions of each of these LRP estimation methods are provided in the following sections, while guidance on when and how proportional and aggregate abundance LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
+
 
 <!--Carrie: can you please review the following two paragraphs to make sure you agree with my revisions.  
 
 Also - I have not yet reponded to this comment from Chuck:
 "what happens with sites where pni cannot be measured because data are not collected or insufficient.  E.g. is sufficient to collect a brood stock sample of 40 fish at the same time and location where the broodstock have been collected for the last 40 years and assume that is a random sample for the population.  ?  we often see different mark rates in the brood stock samples compared to the river spawners.  We also know that the hatchery programs seldom collect a random sample, as many hatchery staff pick big females and avoid collecting jack males."
-
-
-
 -->
 
 We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5. Spawning streams with PNI estimated or assumed to be < 0.5 were excluded from case study analyses.
